mere docs af selections

--- a/src/strip/scrape_it_jobbank.ipynb
+++ b/src/strip/scrape_it_jobbank.ipynb
@@ -211,6 +211,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overskrift  \n",
+    "![](2023-07-10-00-48-32.png)\n",
+    "\n",
+    "Brødtekst  \n",
+    "![](2023-07-10-00-46-52.png)\n",
+    "\n",
+    "Employer\n",
+    "![](2023-07-10-00-49-48.png)\n",
+    "\n",
+    "Publiserings data\n",
+    "![](2023-07-10-00-50-34.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
